--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,9 +5,12 @@ body {
   width: 100%;
   margin: 0 0 0 0;
 }
+
 #about p em {
   font-style: normal;
+  /* color: orange; */
 }
+
 #about {
   border-style: solid;
   border-color: white;
@@ -25,18 +28,21 @@ body {
   width: 75%;
 }
 em {
+  font-style: normal;
   font-weight: bold; /* adds bold */
+  color: rgb(105, 70, 0);
 }
 
 #header {
   width: 100%;
   background-color: rgb(44, 43, 41);
+  position: absolute;
   /* padding-top: 20; */
 }
 
 h1 {
   /* display: inline; */
-  color: white;
+  color: rgb(245, 190, 88);
   font-family: sans-serif;
   font-size: 50px;
   padding-top: 40px;
@@ -44,44 +50,22 @@ h1 {
   margin-bottom: 0px;
 }
 
-h2 {
-  color: black;
-  font-family: sans-serif;
-  margin-top: 30px;
-  font-size: 30pt;
-}
 
-h3 {
-  color: black;
-  font-size: 28pt;
-}
 a {
   color: inherit;
   text-decoration: none;
 }
 
-#logo {
+/* #logo {
   padding: 30px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-.contact li {
-  display: inline;
-  margin-right: 10px;
-}
-
-p.contact {
-  text-align: left;
-  margin-left: 25%;
-  margin-right: 10%;
-  font-size: 14pt;
-}
-
+} */
 
 .nav {
   margin-top: 100px;
-  height: 80%;
+  height: 100%;
   width: 15%;
   position: fixed;
   z-index: 1;
@@ -95,47 +79,96 @@ p.contact {
   padding: 20px 5px 5px 20px;
   text-decoration: none;
   font-size: 25px;
-  color: white;
+  color: rgb(245, 190, 88);
   display: block;
 }
 
-#splitbar {
-  margin-left: 15%;
-  height: 80%;
-  width: 2px;
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  padding-top: 10%;
-  background-color: white;
+.nav a:hover {
+  color: white;
 }
 
-#content {
-  position: fixed;
+.vbar {
+  background-color: orange;
+  width: 2px;
+}
+
+
+#v1bar {
   margin-left: 15%;
-  /* border-top: 10px black; */
-  /* background-color: rgb(235, 227, 195); */
-  height: 100%;
-  margin-top: 2px;
+  height: 100px;
+  position: fixed;
+  background-color: orange;
+}
+
+#v2bar {
+  margin-left: 85%;
+  height: 100px;
+  position: fixed;
+  background-color: orange;
+}
+
+.hbar {
+  background-color: orange;
+  height: 2px;
+}
+
+#h2bar {
+  background-color:orange;
   width: 100%;
 }
-/* nav ul li {
-  display: inline-block;
-  color: white;
-  font-family: sans-serif;
-  padding: 15px;
-  border-style: solid;
-  border-width: 2px;
-  background-color: black;
-  width: 100px;
-} */
-/* #gmail {
-  color: #6f1010;
+
+.content {
+  text-align: center;
+
 }
-#facebook {
-  color: #191262;
-} */
+
+.hook {
+  /* padding-top: 20px; */
+  margin-top:  0;
+  margin-bottom: 0;
+  font-size: 48px;
+
+  /* font-size: 0px; */
+  /* background-color: peachpuff; */
+
+}
+
+#cat1 {
+  margin-top: 0;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  margin-bottom: 0;
+  background-color: peachpuff;
+
+}
+
+#cat2 {
+  margin-top: 0;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  margin-bottom: 0;
+  background-color: white;
+
+}
+
+#cat3 {
+  margin-top: 0;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  margin-bottom: 0;
+  background-color: peachpuff;
+
+}
+
+#cat4 {
+  margin-top: 0;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  margin-bottom: 0;
+  background-color: white;
+
+}
+
 #NA {
   visibility: hidden;
 }
