--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -82,7 +82,7 @@ body {
 body::-webkit-scrollbar { 
   display: none;
 }
-
+/* 
 .nav a {
   padding: 20px 5px 5px 20px;
   text-decoration: none;
@@ -93,9 +93,9 @@ body::-webkit-scrollbar {
 
 .nav a:hover {
   color: white;
-}
+} */
 
-.vbar {
+/* .vbar {
   background-color: orange;
   width: 2px;
 }
@@ -123,7 +123,7 @@ body::-webkit-scrollbar {
 #h2bar {
   background-color:orange;
   width: 100%;
-}
+} */
 
 .content {
   text-align: center;
@@ -134,7 +134,8 @@ body::-webkit-scrollbar {
   /* padding-top: 20px; */
   margin-top:  0;
   margin-bottom: 0;
-  font-size: 48px;
+  font-size: 30px;
+  
 
   /* font-size: 0px; */
   /* background-color: peachpuff; */
@@ -143,8 +144,8 @@ body::-webkit-scrollbar {
 
 #cat1 {
   margin-top: 0;
-  padding-top: 10%;
-  padding-bottom: 10%;
+  padding-top: 12.5%;
+  padding-bottom: 12.5%;
   margin-bottom: 0;
   background-color: peachpuff;
 
@@ -190,3 +191,69 @@ body::-webkit-scrollbar {
 .hidden {
   display: none !important;
 }
+
+@media screen and (min-width: 601px) and (max-width: 1200px) {
+  .hook {
+    font-size: 40px;
+  }
+
+  .hook p {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  #cat1 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+
+  #cat2 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+
+  #cat3 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+
+  #cat4 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .hook {
+    font-size: 28px;
+  }
+
+  .hook p {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  #cat1 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+
+  #cat2 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+
+  #cat3 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+
+  #cat4 {
+    padding-top: 30%;
+    padding-bottom: 30%;
+  }
+
+}
+
+
