--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,14 +1,7 @@
-body {
-  background-color: white;
-  font-family: serif;
-  text-align: center;
-  width: 100%;
-  margin: 0 0 0 0;
-}
 
+/* 
 #about p em {
   font-style: normal;
-  /* color: orange; */
 }
 
 #about {
@@ -26,43 +19,29 @@ body {
 #about img {
   padding: 5px;
   width: 75%;
-}
-em {
+} */
+/* em {
   font-style: normal;
-  font-weight: bold; /* adds bold */
-  color: rgb(105, 70, 0);
-}
-
-#header {
+  font-weight: bold;
+} */
+/* #header {
   width: 100%;
   background-color: rgb(44, 43, 41);
-  position: absolute;
-  /* padding-top: 20; */
-}
-
-h1 {
-  /* display: inline; */
+} */
+/* h1 {
   color: rgb(245, 190, 88);
   font-family: sans-serif;
-  font-size: 50px;
+  font-size: 25px;
   padding-top: 40px;
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
+} */
 /* #logo {
   padding: 30px;
   display: block;
   margin-left: auto;
   margin-right: auto;
 } */
-
 /* .nav {
   margin-top: 100px;
   height: 100%;
@@ -74,14 +53,6 @@ a {
   padding-top: 10%;
   background-color: rgb(44, 43, 41);
 } */
-
-body {
-  scrollbar-width: none; 
-  -ms-overflow-style: none; 
-}
-body::-webkit-scrollbar { 
-  display: none;
-}
 /* 
 .nav a {
   padding: 20px 5px 5px 20px;
@@ -94,7 +65,6 @@ body::-webkit-scrollbar {
 .nav a:hover {
   color: white;
 } */
-
 /* .vbar {
   background-color: orange;
   width: 2px;
@@ -125,6 +95,31 @@ body::-webkit-scrollbar {
   width: 100%;
 } */
 
+
+a {
+  color: inherit;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+a:hover {
+  color: #6d6dfc;
+}
+
+body {
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
+  background-color: white;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  width: 100%;
+  margin: 0 0 0 0;
+}
+body::-webkit-scrollbar { 
+  display: none;
+}
+
 .content {
   text-align: center;
 
@@ -144,10 +139,11 @@ body::-webkit-scrollbar {
 
 #cat1 {
   margin-top: 0;
-  padding-top: 12.5%;
-  padding-bottom: 12.5%;
+  padding-top: 10%;
+  padding-bottom: 10%;
   margin-bottom: 0;
-  background-color: peachpuff;
+  background-color: #6d6dfc;
+  color: white;
 
 }
 
@@ -156,7 +152,7 @@ body::-webkit-scrollbar {
   padding-top: 10%;
   padding-bottom: 10%;
   margin-bottom: 0;
-  background-color: white;
+  background-color: #eceaea;
 
 }
 
@@ -165,18 +161,27 @@ body::-webkit-scrollbar {
   padding-top: 10%;
   padding-bottom: 10%;
   margin-bottom: 0;
-  background-color: peachpuff;
-
+  background-color: #6d6dfc;
+  color:white;
 }
 
 #cat4 {
+  margin-top: 0;
+  padding-top: 8%;
+  padding-bottom: 8%;
+  margin-bottom: 0;
+  background-color: #eceaea;
+  max-height: 400px;
+}
+
+/* #cat5 {
   margin-top: 0;
   padding-top: 10%;
   padding-bottom: 10%;
   margin-bottom: 0;
   background-color: white;
 
-}
+} */
 
 #NA {
   visibility: hidden;
